# cinema4d-mcp

./: .gitignore  LICENSE  MoGraph-docs.md  README.md  addon.py  c4d-sdk-2025.md  main.py  pyproject.toml  setup.py
c4d_plugin/: cinema4d_socket_plugin.py  mcp_server_plugin v0.1.2.pyp  mcp_server_plugin.pyp
src/cinema4d_mcp/: __init__.py  config.py  server.py  utils.py
tests/: mcp_test_harness.jsonl  mcp_test_harness_gui.py  test_server.py
